# mlx-week7

./: .gitignore  README.md  pyproject.toml
docs/: osm_extract.md
notebooks/: annotate.ipynb  baseline_walking_tour_annots.ipynb  full_text_bermondsy.txt  full_text_greenwich.txt  full_text_regents_canal.txt  full_text_spitalfields.txt  gpt_four_annotations.json  gpt_four_annotations.txt  gpt_four_annotations_test.json  resume_training_walking_tour_annots.ipynb  setup.ipynb  shaekspear.ipynb  train_walking_tour_annots.ipynb  training.ipynb
